<resources>
    <string name="app_name">AVA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Aggelos Voice Assistant</string>
    <string name="second_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Accessibility Service -->
    <string name="accessibility_service_description">Επιτρέπει στην AVA να πατάει αυτόματα το κουμπί κλήσης σε εφαρμογές όπως το Viber, για χρήστες με προβλήματα όρασης. Δεν διαβάζει και δεν αποθηκεύει περιεχόμενο οθόνης.</string>
    <string name="accessibility_service_summary">Αυτόματο πάτημα κουμπιού κλήσης</string>

    <!-- VoIP Calibration Activity -->
    <string name="voip_calibration_title">Ρύθμιση VoIP</string>
    <string name="voip_calibration_select_app">Επιλέξτε εφαρμογή</string>
    <string name="voip_calibration_launch_app">Άνοιγμα εφαρμογής</string>
    <string name="voip_calibration_take_screenshot">Λήψη στιγμιότυπου</string>
    <string name="voip_calibration_tap_instruction">Πατήστε στο κουμπί κλήσης</string>
    <string name="voip_calibration_wait_time">Αναμονή (δευτερόλεπτα)</string>
    <string name="voip_calibration_save">Αποθήκευση</string>
    <string name="voip_calibration_cancel">Ακύρωση</string>
    <string name="voip_calibration_retake">Νέα λήψη</string>
    <string name="voip_calibration_success">Η ρύθμιση αποθηκεύτηκε</string>
    <string name="voip_calibration_no_apps">Δεν βρέθηκαν συμβατές εφαρμογές</string>
    <string name="voip_calibration_configured">Ρυθμισμένο</string>
    <string name="voip_calibration_not_configured">Μη ρυθμισμένο</string>
    <string name="voip_calibration_reconfigure">Επαναρύθμιση;</string>

    <!-- VoIP Settings -->
    <string name="voip_settings_title">Ρυθμίσεις VoIP κλήσεων</string>
    <string name="voip_settings_auto_click">Αυτόματο κλικ</string>
    <string name="voip_settings_auto_click_desc">Πατάει αυτόματα το κουμπί κλήσης</string>
    <string name="voip_settings_haptic_guide">Οδηγός με δόνηση</string>
    <string name="voip_settings_haptic_guide_desc">Δείχνει το κουμπί και καθοδηγεί με δόνηση</string>
    <string name="voip_settings_enable_service">Ενεργοποίηση υπηρεσίας</string>
    <string name="voip_settings_service_status">Κατάσταση υπηρεσίας</string>

    <!-- VoIP Errors/Feedback -->
    <string name="voip_error_app_not_opened">Η εφαρμογή δεν άνοιξε εγκαίρως</string>
    <string name="voip_error_click_failed">Δεν μπόρεσα να πατήσω το κουμπί</string>
    <string name="voip_error_service_disabled">Η υπηρεσία προσβασιμότητας δεν είναι ενεργή</string>
    <string name="voip_error_unknown_app">Άγνωστη εφαρμογή</string>

    <!-- Screenshot Overlay -->
    <string name="screenshot_overlay_capture">Λήψη</string>
    <string name="screenshot_overlay_cancel">Ακύρωση</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>